[package]
name = "helm-r2g"
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
include = ["/src", "/go"]

[dependencies]
rust2go = { version = "0.4.1" }
thiserror = "2.0.12"

[build-dependencies]
rust2go = { version = "0.4.1", features = ["build"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "helm"
path = "examples/helm/src/main.rs"
