[package]
name = "example-helm"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
helm-r2g = { git = "https://github.com/cluster-api-community/helm-r2g", tag = "v0.0.2" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "example-helm"
path = "src/main.rs"
